--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,16 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 } */
+
+.text-gradient {
+  transition: all 0.8s;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(90deg, #808080, #808080 50%, #000000 0);
+  background-size: 200% 100%;
+  background-position: 100%;
+  color: #000000;
+  &:hover {
+    background-position: 0;
+  }
+}
