--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,37 @@ body {
     background-position: 0;
   }
 }
+
+/* code block styling */
+.prose code[data-line-numbers] {
+  counter-reset: line;
+}
+
+.prose code[data-line-numbers] > span[data-line]::before {
+  counter-increment: line;
+  content: counter(line);
+
+  display: inline-block;
+  width: 0.75rem;
+  margin-right: 1.25rem;
+  text-align: right;
+  color: gray;
+}
+
+.prose code[data-line-numbers-max-digits='2'] > span[data-line]::before {
+  width: 1.25rem;
+}
+.prose code[data-line-numbers-max-digits='3'] > span[data-line]::before {
+  width: 1.75rem;
+}
+
+.prose code span[data-highlighted-line] {
+  @apply border-l-2 bg-opacity-10 border-primary bg-primary;
+}
+
+.prose figcaption[data-rehype-pretty-code-title] {
+  @apply px-4 py-3 text-sm font-semibold bg-gray1 rounded-t-lg;
+}
+.prose div[data-rehype-pretty-code-title] + pre {
+  @apply mt-0 rounded-t-none;
+}
